<resources>
    <string name="app_name">AURORA</string>
    <string name="Welcome">¡¡Que tal!! Bienvenido a AURORA una aplicación de salud mental y control emocional</string>
    <string name="btnSingUp">Registrarse</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="username">Ingresa tu usuario</string>
    <string name="name">Ingresa tu nombre</string>
    <string name="age">Ingresa tu edad</string>
    <string name="gender">Selecciona tu genero:</string>
    <string name="password">Ingresa tu contraseña</string>
    <string name="confirmPassword">Confirma tu contraseña</string>
    <string name="email">Ingresa tu email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_happy_emotion">HappyEmotion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>