<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="73dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/txtSingUp"
        android:layout_width="193dp"
        android:layout_height="89dp"
        android:fontFamily="@font/adlam_display"
        android:text="INICIO DE SESIÓN"
        android:textColor="@color/textsColors"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/LOUser"
        android:layout_width="210dp"
        android:layout_height="34dp"
        android:layout_marginTop="112dp"
        android:background="@color/colorBackground3"
        android:ems="10"
        android:fontFamily="@font/adlam_display"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/textsColors2"
        android:textColorHint="@color/textsColors3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/LOEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

    <EditText
        android:id="@+id/LOEmail"
        android:layout_width="210dp"
        android:layout_height="34dp"
        android:layout_marginBottom="28dp"
        android:background="@color/colorBackground3"
        android:ems="10"
        android:fontFamily="@font/adlam_display"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="@color/textsColors2"
        android:textColorHint="@color/textsColors3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/LOPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/LOPass"
        android:layout_width="211dp"
        android:layout_height="35dp"
        android:layout_marginBottom="412dp"
        android:background="@color/colorBackground3"
        android:ems="10"
        android:fontFamily="@font/adlam_display"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textColor="@color/textsColors2"
        android:textColorHint="@color/textsColors3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonsColors1"
        android:fontFamily="@font/adlam_display"
        android:layout_marginBottom="28dp"
        android:text="Iniciar Sesión"
        android:textColor="#FFF6F6"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/IMGreturn"
        android:layout_width="39dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/btnreturn" />

</androidx.constraintlayout.widget.ConstraintLayout>